--- a/Slijterij_Sjonnie_Loper/Slijterij_Sjonnie_Loper/Views/Login/Login.cshtml
+++ b/Slijterij_Sjonnie_Loper/Slijterij_Sjonnie_Loper/Views/Login/Login.cshtml
@@ -57,6 +57,11 @@
                 <td>@Html.ValidationMessageFor(model => model.Username)</td>
             </tr>
             <tr>
+                <td colspan="2">
+                    <label class="field-validation-error">@Html.DisplayFor(model => model.LoginErrorMessage)</label>
+                </td>
+            </tr>
+            <tr>
                 <td></td>
                 <td>
                     <input type="submit" name="name" value="Login" />
